# panguboard-cm4-gpioled

./: .gitignore  README.md  build.sh  debug_cli.sh  fw_cortex_m4.sh
source/: CMakeLists.txt
source/LinkerScripts/: STM32MP157CAAX_RAM.ld
source/cmake/: freertos.cmake  hal_drivers.cmake  ll_drivers.cmake  openamp.cmake
source/src/: CMakeLists.txt
source/src/Inc/: main.h  res_mgr_conf.h  resmgr_utility.h  stm32mp1xx_hal_conf.h  stm32mp1xx_it.h
source/src/User/: main.c  resmgr_utility.c  stm32mp1xx_hal_msp.c  stm32mp1xx_it.c
utils/: debug_prepost.sh  gdb.ini  panguboard-stlink-jtag.cfg  panguboard-stlink-swd.cfg
